--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -23,11 +23,18 @@
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --font-weight-bold: 700;
+  --font-weight-semibold: 600;
+  --font-weight-medium: 500;
+  --font-weight-regular: 400;
   --max-width: 1440px;
   --space-8: 0.5rem;
   --space-16: 1rem;
   --space-24: 1.5rem;
   --space-32: 2rem;
+  --transition-timing-1: 100ms;
+  --transition-timing-2: 200ms;
+  --transition-timing-3: 300ms;
 }
 
 /*
@@ -55,7 +62,9 @@ html {
 body {
   background-color: var(--color-grey-50);
   font-family: var(--font-inter);
-  font-size: 1rem;
+  font-size: 16px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   margin: 0;
   overflow-x: hidden;
 }
@@ -75,7 +84,7 @@ h2,
 h3,
 h4,
 strong {
-  font-weight: 600;
+  font-weight: var(--font-weight-semibold);
 }
 
 img,
@@ -87,4 +96,19 @@ svg {
 img {
   height: auto;
   max-width: 100%;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+}
+
+button {
+  cursor: pointer;
 }
