--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -6,6 +6,14 @@
   position: relative;
 }
 
+.cardImageWrapperFill {
+  aspect-ratio: 2/3;
+  max-height: 513px;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+}
+
 .cardImage {
   border-radius: var(--border-radius-small);
   opacity: 0.25;
@@ -18,6 +26,11 @@
   opacity: 1;
 }
 
+.cardImageFill {
+  background-color: var(--color-grey-400);
+  object-fit: cover;
+}
+
 .cardMeta {
   align-items: center;
   display: flex;
@@ -27,7 +40,7 @@
 }
 
 .cardMetaName {
-  font-weight: 500;
+  font-weight: var(--font-weight-medium);
   margin: 0;
 }
 
