--- a/src/components/Gallery/Gallery.module.css
+++ b/src/components/Gallery/Gallery.module.css
@@ -1,48 +1,48 @@
-.galleryListWrapper {
+.galleryWrapper {
   display: grid;
   gap: var(--space-16);
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.galleryListNoResults {
+.galleryNoResults {
   font-size: 18px;
 }
 
-.galleryListSearchTerm {
+.gallerySearchTerm {
   color: var(--color-grey-700);
   display: inline-block;
 }
 
-.galleryListSearchTerm::before {
+.gallerySearchTerm::before {
   content: '“';
 }
 
-.galleryListSearchTerm::after {
+.gallerySearchTerm::after {
   content: '”';
 }
 
-.galleryListTryAgain {
+.galleryTryAgain {
   display: block;
 }
 
 @media (--small-viewport) {
-  .galleryListWrapper {
+  .galleryWrapper {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
 @media (--medium-viewport) {
-  .galleryListWrapper {
+  .galleryWrapper {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .galleryListNoResults {
+  .galleryNoResults {
     font-size: 28px;
   }
 }
 
 @media (--large-viewport) {
-  .galleryListWrapper {
+  .galleryWrapper {
     gap: var(--space-24);
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
