--- a/src/components/PageTemplates/GalleryTemplate/GalleryTemplate.module.css
+++ b/src/components/PageTemplates/GalleryTemplate/GalleryTemplate.module.css
@@ -7,17 +7,22 @@
   background-color: var(--color-grey-50);
   display: flex;
   gap: var(--space-8);
-  left: 0;
+  inset: 0;
   margin-bottom: var(--space-16);
   padding: var(--space-8) 0 var(--space-8);
   position: sticky;
-  right: 0;
-  top: 0;
   z-index: 1;
+}
+
+.galleryRootLink {
+  align-items: center;
+  display: flex;
+  gap: var(--space-8);
 }
 
 .galleryTitle {
   display: none;
+  white-space: nowrap;
 }
 
 .galleryHeaderIcon {
@@ -61,7 +66,7 @@
   }
 
   .galleryNav {
-    gap: var(--space-24);
+    gap: var(--space-16);
   }
 
   .galleryErrorMessage {
