--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -1,114 +1,2 @@
-/* stylelint-disable color-no-hex */
-
+@import 'base/index.css';
 @import-normalize;
-
-/*
- * Base variables
- * ============================================================ */
-
-:root {
-  --border-radius-xsmall: 0.25rem;
-  --border-radius-small: 0.5rem;
-  --color-blue-700: #1976d2;
-  --color-grey-50: #fafafa;
-  --color-grey-100: #f5f5f5;
-  --color-grey-200: #eee;
-  --color-grey-300: #e0e0e0;
-  --color-grey-400: #bdbdbd;
-  --color-grey-500: #9e9e9e;
-  --color-grey-600: #757575;
-  --color-grey-700: #616161;
-  --color-grey-800: #424242;
-  --color-grey-900: #212121;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-  --font-weight-bold: 700;
-  --font-weight-semibold: 600;
-  --font-weight-medium: 500;
-  --font-weight-regular: 400;
-  --max-width: 1440px;
-  --space-8: 0.5rem;
-  --space-16: 1rem;
-  --space-24: 1.5rem;
-  --space-32: 2rem;
-  --transition-timing-1: 100ms;
-  --transition-timing-2: 200ms;
-  --transition-timing-3: 300ms;
-}
-
-/*
- * Media queries
- * ============================================================ */
-
-@custom-media --small-viewport (min-width: 481px);
-@custom-media --medium-viewport (min-width: 768px);
-@custom-media --large-viewport (min-width: 1024px);
-
-/*
- * Base styles
- * ============================================================ */
-
-html {
-  box-sizing: border-box;
-}
-
-*,
-*::after,
-*::before {
-  box-sizing: inherit;
-}
-
-body {
-  background-color: var(--color-grey-50);
-  font-family: var(--font-inter);
-  font-size: 16px;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  margin: 0;
-  overflow-x: hidden;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-a:focus,
-a:hover {
-  text-decoration: underline;
-}
-
-h1,
-h2,
-h3,
-h4,
-strong {
-  font-weight: var(--font-weight-semibold);
-}
-
-img,
-svg {
-  display: block;
-  vertical-align: middle;
-}
-
-img {
-  height: auto;
-  max-width: 100%;
-}
-
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit;
-  font-size: 100%;
-  line-height: 1.15;
-  margin: 0;
-}
-
-button {
-  cursor: pointer;
-}
