--- a/src/assets/styles/base/base.css
+++ b/src/assets/styles/base/base.css
@@ -14,6 +14,7 @@ html {
 
 body {
   background-color: var(--color-grey-50);
+  color: var(--color-grey-900);
   font-family: var(--font-inter);
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
@@ -63,6 +64,9 @@ textarea {
 }
 
 button {
+  appearance: none;
+  background-color: transparent;
+  border: 0;
   cursor: pointer;
 }
 
