--- a/src/components/Molecules/Card/Card.module.css
+++ b/src/components/Molecules/Card/Card.module.css
@@ -3,14 +3,24 @@
 }
 
 .cardImageWrapper {
+  overflow: hidden;
   position: relative;
+}
+
+.cardBtn {
+  background-color: transparent;
+  border-radius: var(--border-radius-small);
+  display: block;
+  height: 100%;
+  inset: 0;
+  padding: 0;
+  position: absolute;
+  transition: background-color var(--transition-timing-2) ease;
 }
 
 .cardImageWrapperFill {
   aspect-ratio: 2/3;
   max-height: 513px;
-  overflow: hidden;
-  position: relative;
   width: 100%;
 }
 
@@ -18,7 +28,7 @@
   border-radius: var(--border-radius-small);
   opacity: 0.25;
   transform: translate3d(0, 0, 0);
-  transition: opacity 200ms ease;
+  transition: opacity var(--transition-timing-2) ease;
   width: 100%;
 }
 
@@ -56,16 +66,28 @@
 }
 
 .cardLink {
+  align-items: center;
   color: var(--color-blue-700);
-}
-
-.cardLink:focus,
-.cardLink:hover {
-  color: var(--color-grey-900);
-  text-decoration: none;
+  display: flex;
+  height: 48px;
+  justify-content: center;
+  width: 48px;
 }
 
 .cardLinkIcon {
   fill: currentcolor;
   height: 24px;
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .cardBtn:focus,
+  .cardBtn:hover {
+    background-color: rgb(0 0 0 / 40%);
+  }
+
+  .cardLink:focus,
+  .cardLink:hover {
+    color: var(--color-grey-900);
+    text-decoration: none;
+  }
 }
