--- a/src/components/Atoms/CategorySwitcher/CategorySwitcher.module.css
+++ b/src/components/Atoms/CategorySwitcher/CategorySwitcher.module.css
@@ -11,18 +11,18 @@
   font-weight: var(--font-weight-semibold);
   gap: var(--space-4);
   height: 40px;
-  padding: 8px 16px;
+  padding: var(--space-8) var(--space-16);
   text-transform: capitalize;
 }
 
 .categoryBtn:first-child {
-  border-bottom-left-radius: 8px;
-  border-top-left-radius: 8px;
+  border-bottom-left-radius: var(--border-radius-small);
+  border-top-left-radius: var(--border-radius-small);
 }
 
 .categoryBtn:last-child {
-  border-bottom-right-radius: 8px;
-  border-top-right-radius: 8px;
+  border-bottom-right-radius: var(--border-radius-small);
+  border-top-right-radius: var(--border-radius-small);
 }
 
 .categoryBtnActive {
