--- a/src/assets/styles/base/base.css
+++ b/src/assets/styles/base/base.css
@@ -28,11 +28,6 @@ a {
   text-decoration: none;
 }
 
-a:focus,
-a:hover {
-  text-decoration: underline;
-}
-
 h1,
 h2,
 h3,
@@ -73,4 +68,11 @@ button {
 .portal {
   position: relative;
   z-index: 2;
+}
+
+@media (hover: hover) and (pointer: fine) {
+  a:focus,
+  a:hover {
+    text-decoration: underline;
+  }
 }
