--- a/src/components/PageTemplates/GalleryTemplate/GalleryTemplate.module.css
+++ b/src/components/PageTemplates/GalleryTemplate/GalleryTemplate.module.css
@@ -1,41 +1,6 @@
 .gallery {
+  padding-top: 72px;
   position: relative;
-}
-
-.galleryHeader {
-  align-items: center;
-  background-color: var(--color-grey-50);
-  display: flex;
-  gap: var(--space-8);
-  inset: 0;
-  margin-bottom: var(--space-16);
-  padding: var(--space-8) 0 var(--space-8);
-  position: sticky;
-  z-index: 1;
-}
-
-.galleryRootLink {
-  align-items: center;
-  display: flex;
-  gap: var(--space-8);
-}
-
-.galleryTitle {
-  display: none;
-  white-space: nowrap;
-}
-
-.galleryHeaderIcon {
-  height: 40px;
-  width: 40px;
-}
-
-.galleryNav {
-  align-items: center;
-  display: flex;
-  flex: 1;
-  gap: var(--space-8);
-  justify-content: space-between;
 }
 
 .galleryListShim {
@@ -54,19 +19,8 @@
 }
 
 @media (--medium-viewport) {
-  .galleryHeader {
-    gap: var(--space-16);
-    margin-bottom: var(--space-24);
-    padding: var(--space-24) 0 var(--space-16);
-  }
-
-  .galleryHeaderIcon {
-    height: 50px;
-    width: 50px;
-  }
-
-  .galleryNav {
-    gap: var(--space-16);
+  .gallery {
+    padding-top: 114px;
   }
 
   .galleryErrorMessage {
@@ -79,9 +33,8 @@
 }
 
 @media (--large-viewport) {
-  .galleryTitle {
-    display: block;
-    font-size: 24px;
+  .gallery {
+    padding-top: 124px;
   }
 
   .galleryErrorEmoji {
