Add text card component

--- a/src/components/Organisms/Gallery/Gallery.module.css
+++ b/src/components/Organisms/Gallery/Gallery.module.css
@@ -34,6 +34,10 @@
   .galleryWrapper {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
+
+  .galleryTextCard {
+    grid-column: span 2;
+  }
 }
 
 @media (--medium-viewport) {
