--- a/src/components/Atoms/SearchForm/SearchForm.module.css
+++ b/src/components/Atoms/SearchForm/SearchForm.module.css
@@ -21,6 +21,18 @@
   background-color: var(--color-grey-300);
 }
 
+.searchInput::-webkit-search-cancel-button {
+  appearance: none;
+  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='var(--color-grey-900)'><path d='M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z'/></svg>")
+    center no-repeat;
+  border-radius: 50%;
+  cursor: pointer;
+  height: 14px;
+  margin-right: 2px;
+  outline: 2px solid var(--color-grey-900);
+  width: 14px;
+}
+
 .searchBtn {
   align-items: center;
   background-color: transparent;
